--- a/main.css
+++ b/main.css
@@ -12,10 +12,12 @@
     border: none;
     border-radius: 7px;
     background: wheat;
+    margin-top: 40px;
 }
 .card{
+    padding: 30px;
     width: 300px;
-    height: 200px;
+    height: 300px;
     line-height: 30px;
     border: 1px solid red;
     margin: 0 auto;
@@ -26,4 +28,10 @@
     justify-content: space-between;
     padding: 0 40px;
     margin-top: 50px;
+}
+.git{
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    color: blue;
 }
